hdbdos: Add support for Dragon
This adds a table of ROM equivalents CoCo - Dragon
so that HDBDOS can run using the Dragon ROM.

Two example targets have been added to the Makefile.

The hdbdos code has just a few Dragon tweaks in the command
table stub initialization, and different BASIC token values.

FIXME: The USRxx table must be moved on Dragon when command table
stubs are added. For now we are using an unused spot in the
HDBDOS code segment, but that is not ideal if HDBDOS is burnt
to ROM.

--- a/hdbdos/Makefile
+++ b/hdbdos/Makefile
@@ -211,6 +211,15 @@ hdbdw3arduino.bin: preload hdbdw3arduino.rom postload
 hdbdw3arduino.wav: hdbdw3arduino.bin
 	$(MAKEWAV) -o$@ -nHDBDW3ARD $<
 
+# Dragon example, DW3 run from lower RAM
+hdbdw3dgn32ram.bin: ../cocoroms/ecb_equates.asm ../cocoroms/dragon_equivs.asm hdbdos.asm
+	$(AS) -b -DDW -DORG=0x6000 -DLevel=1 -DDRAGON $+ -o$@
+hdbdw3dgn32ram.wav: hdbdw3dgn32ram.bin
+	$(MAKEWAV) -o$@ -nHDBDWD32 $<
+
+# Dragon example, IDE LBA for ROM cartridge
+hdblbadgn.rom: ../cocoroms/ecb_equates.asm ../cocoroms/dragon_equivs.asm hdbdos.asm
+	$(AS) -DIDE -DUSELBA -DLevel=1 -DDRAGON $+ -o$@
 
 clean:
 	-rm -f preload postload $(HDBROM) $(HDBBIN) $(HDBCAS)
