Updated dwread.asm and dwwrite.asm so that the base address for the SY6551 could be changed from the makefile.
Updated DWDOS makefile to create new boot tracks, ROM's, BIN's, and wave files
for the DirectModem Pak and Deluxe RS232 Pak addresses.

--- a/dwdos/Makefile
+++ b/dwdos/Makefile
@@ -7,19 +7,22 @@ ASOUT		= -o
 ECHO		= echo
 MAKEWAV		= makewav -r -c
 
-ROMS		= dw3dos_mb_cc3.rom dw3dos_mb_cc2.rom dw3dos_mb_cc1.rom \
-		dw3dos_dsk_cc3.rom dw3dos_dsk_cc2.rom dw3dos_dsk_cc1.rom \
-		dw3doscc3.bin dw3doscc2.bin dw3doscc1.bin
+ROMS		= dw3dos_mb_cc3.rom dw3dos_mb_cc2.rom dw3dos_mb_cc1.rom dw3dos_mb_rs232_pak.rom \
+		dw3dos_mb_bck.rom dw3dos_mb_directmodem_pak.rom \
+		dw3dos_dsk_cc3.rom dw3dos_dsk_cc2.rom dw3dos_dsk_cc1.rom dw3dos_dsk_rs232_pak.rom \
+		dw3dos_dsk_bck.rom dw3dos_dsk_directmodem_pak.rom \
+		dw3doscc3.bin dw3doscc2.bin dw3doscc1.bin dw3dos_rs232_pak.bin dw3dosbck.bin \
+		dw3dos_directmodem_pak.bin
 
 HSROMS		= dw4dos_mb_cc3.rom dw4dos_mb_cc2.rom \
 		dw4dos_dsk_cc3.rom dw4dos_dsk_cc2.rom \
 		dw4doscc3.bin dw4doscc2.bin
 
-CASSFILES	= dw3doscc1.wav dw3doscc2.wav dw3doscc3.wav
+CASSFILES	= dw3doscc1.wav dw3doscc2.wav dw3doscc3.wav dw3dos_rs232_pak.wav dw3dos_directmodem_pak.wav
 
-HSCASSFILES	= dw4doscc2.wav dw4doscc3.wav	
+HSCASSFILES	= dw4doscc2.wav dw4doscc3.wav
 
-TRACKS		= dw3dos_cc3.trk dw3dos_cc2.trk dw3dos_cc1.trk
+TRACKS		= dw3dos_cc3.trk dw3dos_cc2.trk dw3dos_cc1.trk dw3dos_rs232_pak.trk dw3dos_directmodem_pak.trk
 
 HSTRACKS	= dw4dos_cc3.trk dw4dos_cc2.trk
 
@@ -40,6 +43,15 @@ banner:
 dsk:	objs
 
 # DW3DOS ROMs
+dw3dos_mb_bck.rom:	dw3dos.asm
+	$(AS) $(ASOUT)$@ $< $(AFLAGS) -DCoCo=2 -DBECKER=1
+
+dw3dos_mb_directmodem_pak.rom:	dw3dos.asm
+	$(AS) $(ASOUT)$@ $< $(AFLAGS) -DCoCo=2 -DSY6551N=1 -DSY6551B=65388
+
+dw3dos_mb_rs232_pak.rom:	dw3dos.asm
+	$(AS) $(ASOUT)$@ $< $(AFLAGS) -DCoCo=2 -DSY6551N=1
+
 dw3dos_mb_cc3.rom:	dw3dos.asm
 	$(AS) $(ASOUT)$@ $< $(AFLAGS) -DCoCo=3
 
@@ -48,6 +60,15 @@ dw3dos_mb_cc2.rom:	dw3dos.asm
 
 dw3dos_mb_cc1.rom:	dw3dos.asm
 	$(AS) $(ASOUT)$@ $< $(AFLAGS) -DCoCo=1 -DBAUD38400=1
+
+dw3dos_dsk_bck.rom:	dw3dos.asm
+	$(AS) $(ASOUT)$@ $< $(AFLAGS) -DCoCo=2 -DDISKROM=1 -DBECKER=1
+
+dw3dos_dsk_directmodem_pak.rom:	dw3dos.asm
+	$(AS) $(ASOUT)$@ $< $(AFLAGS) -DCoCo=2 -DDISKROM=1 -DSY6551N=1 -DSY6551B=65388
+
+dw3dos_dsk_rs232_pak.rom:	dw3dos.asm
+	$(AS) $(ASOUT)$@ $< $(AFLAGS) -DCoCo=2 -DDISKROM=1 -DSY6551N=1
 
 dw3dos_dsk_cc3.rom:	dw3dos.asm
 	$(AS) $(ASOUT)$@ $< $(AFLAGS) -DCoCo=3 -DDISKROM=1
@@ -58,6 +79,15 @@ dw3dos_dsk_cc2.rom:	dw3dos.asm
 dw3dos_dsk_cc1.rom:	dw3dos.asm
 	$(AS) $(ASOUT)$@ $< $(AFLAGS) -DCoCo=1 -DDISKROM=1 -DBAUD38400=1
 
+dw3dosbck.bin:	dw3dos.asm
+	$(AS) $(ASOUT)$@ $< $(AFLAGS) -DCoCo=2 -DBIN=1 -b -DBECKER=1
+
+dw3dos_directmodem_pak.bin:	dw3dos.asm
+	$(AS) $(ASOUT)$@ $< $(AFLAGS) -DCoCo=2 -DBIN=1 -b -DSY6551N=1 -DSY6551B=65388
+
+dw3dos_rs232_pak.bin:	dw3dos.asm
+	$(AS) $(ASOUT)$@ $< $(AFLAGS) -DCoCo=2 -DBIN=1 -b -DSY6551N=1
+
 dw3doscc3.bin:	dw3dos.asm
 	$(AS) $(ASOUT)$@ $< $(AFLAGS) -DCoCo=3 -DBIN=1 -b
 
@@ -66,6 +96,12 @@ dw3doscc2.bin:	dw3dos.asm
 
 dw3doscc1.bin:	dw3dos.asm
 	$(AS) $(ASOUT)$@ $< $(AFLAGS) -DCoCo=1 -DBIN=1 -b -DBAUD38400=1
+
+dw3dos_directmodem_pak.wav:	dw3dos_directmodem_pak.bin
+	$(MAKEWAV) -o$@ -nDW3DOSDM $<
+
+dw3dos_rs232_pak.wav:	dw3dos_rs232_pak.bin
+	$(MAKEWAV) -o$@ -nDW3DOSRS $<
 
 dw3doscc3.wav:	dw3doscc3.bin
 	$(MAKEWAV) -o$@ -nDW3DOSC3 $<
@@ -102,6 +138,15 @@ dw4doscc2.wav:	dw4doscc2.bin
 	$(MAKEWAV) -o$@ -nDW3DOSC2 $<
 
 # DW3DOS Tracks
+dw3dosbck.trk:	dw3dos.asm
+	$(AS) $(ASOUT)$@ $< $(AFLAGS) -DCoCo=2 -DDOSTRACK -DBECKER=1
+
+dw3dos_directmodem_pak.trk:	dw3dos.asm
+	$(AS) $(ASOUT)$@ $< $(AFLAGS) -DCoCo=2 -DDOSTRACK -DSY6551N=1 -DSY6551B=65388
+
+dw3dos_rs232_pak.trk:	dw3dos.asm
+	$(AS) $(ASOUT)$@ $< $(AFLAGS) -DCoCo=2 -DDOSTRACK -DSY6551N=1
+
 dw3dos_cc3.trk:	dw3dos.asm
 	$(AS) $(ASOUT)$@ $< $(AFLAGS) -DCoCo=3 -DDOSTRACK
 
