Updated HDBDOS Makefile so that 3 new ROM sets will be made for DW3. HDBDW3DM.xxx is to use the DirectModem Pak that has been modded with a RS232 port.
HDBDW3D3.xxx is the CoCo 3 version of the HDBDW3DM.xxx

HDBDW3DG.xxx is the Dragon64/Tano Dragon64 version of the HDBDOS DW3
when the Dragon 64/Tano Dragon64 are being used in CoCo mode and using
the SY6551 that is built into the Dragon64/Tano Dragon64.

--- a/hdbdos/Makefile
+++ b/hdbdos/Makefile
@@ -2,20 +2,21 @@ HDBSCSI	= hdbtc3.rom hdbkenton.rom hdblrtech.rom hdbd4n1.rom hdbdhdii.rom
 HDBIDE  = hdblba.rom hdbchs.rom
 HDBDW   = hdbdw3cc1.rom hdbdw3cc2.rom hdbdw3cc3.rom \
 	hdbdw3bck.rom hdbdw3bc3.rom hdbdw3bckt.rom hdbdw3bc3t.rom hdbdw3jc3.rom hdbdw3jc2.rom \
-	hdbdw3arduino.rom hdbdw3sy.rom hdbdw3s3.rom
+	hdbdw3arduino.rom hdbdw3sy.rom hdbdw3s3.rom hdbdw3dm.rom hdbdw3d3.rom hdbdw3dg.rom
 HDBDW4  = hdbdw4cc3.rom hdbdw4cc2.rom
 HDBROM  = $(HDBSCSI) $(HDBIDE) $(HDBDW)
 HDBBIN	= hdbtc3.bin hdbkenton.bin hdblrtech.bin hdbd4n1.bin hdbdhdii.bin \
 	hdblba.bin hdbchs.bin hdbdw3cc1.bin hdbdw3cc2.bin hdbdw3cc3.bin \
 	hdbdw3bck.bin hdbdw3bc3.bin hdbdw3bc3t.bin hdbdw3bckt.bin hdbdw3jc3.bin hdbdw3jc2.bin \
-	hdbdw3arduino.bin hdbdw3sy.bin hdbdw3s3.bin
+	hdbdw3arduino.bin hdbdw3sy.bin hdbdw3s3.bin hdbdw3dm.bin hdbdw3dg.bin hdbdw3d3.bin
 HDBBIN4 = hdbdw4cc2.bin hdbdw4cc3.bin
 HDBCAS  = hdbtc3.wav hdbkenton.wav hdblrtech.wav hdbd4n1.wav hdbdhdii.wav \
 	hdblba.wav hdbchs.wav hdbdw3cc1.wav hdbdw3cc2.wav hdbdw3cc3.wav \
 	hdbdw3bck.wav hdbdw3bc3.wav hdbdw3jc3.wav hdbdw3jc2.wav \
 	hdbdw3arduino.wav hdbdw3bckt.wav hdbdw3bc3t.wav \
 	hdbdw3bck.cas hdbdw3bc3.cas hdbdw3bc3t.cas hdbdw3bckt.cas \
-	hdbdw3sy.wav hdbdw3sy.cas hdbdw3s3.wav hdbdw3s3.cas
+	hdbdw3sy.wav hdbdw3sy.cas hdbdw3s3.wav hdbdw3s3.cas hdbdw3dm.cas \
+	hdbdw3d3.cas hdbdw3dg.cas hdbdw3dm.wav hdbdw3d3.wav hdbdw3dg.wav
 HDBCAS4	= hdbdw4cc3.wav hdbdw4cc2.wav
 
 ALLOBJS         = preload postload $(HDBROM) $(HDBBIN) $(HDBCAS)
@@ -106,6 +107,21 @@ hdbdw3cc1.wav: LABEL = HDBDW3C1
 hdbdw3bck.rom: FLAGS = -DDW -DLevel=1 -DBECKER
 hdbdw3bck.wav: LABEL = HDBDW3BK
 hdbdw3bck.cas: LABEL = HDBDW3BK
+
+# DW3 CoCo Mode Dragon64/Tano Dragon64  RS232 Port Base Address FF04
+hdbdw3dg.rom: FLAGS = -DDW -DLevel=1 -DSY6551N -DSY6551B=65284
+hdbdw3dg.wav: LABEL = HDBDW3DG
+hdbdw3dg.cas: LABEL = HDBDW3DG
+
+# DW3 CoCo Direct Modem RS232 Pak Base Address FF6C
+hdbdw3dm.rom: FLAGS = -DDW -DLevel=1 -DSY6551N -DSY6551B=65388
+hdbdw3dm.wav: LABEL = HDBDW3DM
+hdbdw3dm.cas: LABEL = HDBDW3DM
+
+# DW3 CoCo 3 Direct Modem RS232 Pak Base Address FF6C
+hdbdw3d3.rom: FLAGS = -DDW -DLevel=3 -DSY6551N -DSY6551B=65388
+hdbdw3d3.wav: LABEL = HDBDW3D3
+hdbdw3d3.cas: LABEL = HDBDW3D3
 
 # DW3 CoCo Deluxe RS232 Pak Base Address FF68
 hdbdw3sy.rom: FLAGS = -DDW -DLevel=1 -DSY6551N
