--- a/dwdos/Makefile
+++ b/dwdos/Makefile
@@ -9,10 +9,12 @@ MAKEWAV		= makewav -r -c
 
 ROMS		= dw3dos_mb_cc3.rom dw3dos_mb_cc2.rom dw3dos_mb_cc1.rom dw3dos_mb_rs232_pak.rom \
 		dw3dos_mb_bck.rom dw3dos_mb_directmodem_pak.rom dw3dos_mb_cocolink.rom \
+		dw3dos_mb_bckwifi.rom \
 		dw3dos_dsk_cc3.rom dw3dos_dsk_cc2.rom dw3dos_dsk_cc1.rom dw3dos_dsk_rs232_pak.rom \
 		dw3dos_dsk_bck.rom dw3dos_dsk_directmodem_pak.rom dw3dos_dsk_cocolink.rom \
+		dw3dos_dsk_bckwifi.rom \
 		dw3doscc3.bin dw3doscc2.bin dw3doscc1.bin dw3dos_rs232_pak.bin dw3dosbck.bin \
-		dw3dos_directmodem_pak.bin dw3dos_cocolink.bin
+		dw3dos_directmodem_pak.bin dw3dos_cocolink.bin dw3dos_bckwifi.bin
 
 HSROMS		= dw4dos_mb_cc3.rom dw4dos_mb_cc2.rom \
 		dw4dos_dsk_cc3.rom dw4dos_dsk_cc2.rom \
@@ -24,7 +26,7 @@ CASSFILES	= dw3doscc1.wav dw3doscc2.wav dw3doscc3.wav dw3dos_rs232_pak.wav dw3do
 HSCASSFILES	= dw4doscc2.wav dw4doscc3.wav
 
 TRACKS		= dw3dos_cc3.trk dw3dos_cc2.trk dw3dos_cc1.trk dw3dos_rs232_pak.trk dw3dos_directmodem_pak.trk \
-			dw3dos_cocolink.trk
+			dw3dos_cocolink.trk dw3dos_bckwifi.trk
 
 HSTRACKS	= dw4dos_cc3.trk dw4dos_cc2.trk
 
@@ -48,6 +50,9 @@ dsk:	objs
 dw3dos_mb_bck.rom:	dw3dos.asm
 	$(AS) $(ASOUT)$@ $< $(AFLAGS) -DCoCo=2 -DBECKER=1
 
+dw3dos_mb_bckwifi.rom:	dw3dos.asm
+	$(AS) $(ASOUT)$@ $< $(AFLAGS) -DCoCo=2 -DBECKER=1 -DBECKBASE=65388
+
 dw3dos_mb_directmodem_pak.rom:	dw3dos.asm
 	$(AS) $(ASOUT)$@ $< $(AFLAGS) -DCoCo=2 -DSY6551N=1 -DSY6551B=65388
 
@@ -69,6 +74,9 @@ dw3dos_mb_cc1.rom:	dw3dos.asm
 dw3dos_dsk_bck.rom:	dw3dos.asm
 	$(AS) $(ASOUT)$@ $< $(AFLAGS) -DCoCo=2 -DDISKROM=1 -DBECKER=1
 
+dw3dos_dsk_bckwifi.rom:	dw3dos.asm
+	$(AS) $(ASOUT)$@ $< $(AFLAGS) -DCoCo=2 -DDISKROM=1 -DBECKER=1 -DBECKBASE=65388
+
 dw3dos_dsk_directmodem_pak.rom:	dw3dos.asm
 	$(AS) $(ASOUT)$@ $< $(AFLAGS) -DCoCo=2 -DDISKROM=1 -DSY6551N=1 -DSY6551B=65388
 
@@ -89,6 +97,9 @@ dw3dos_dsk_cc1.rom:	dw3dos.asm
 
 dw3dosbck.bin:	dw3dos.asm
 	$(AS) $(ASOUT)$@ $< $(AFLAGS) -DCoCo=2 -DBIN=1 -b -DBECKER=1
+
+dw3dos_bckwifi.bin:	dw3dos.asm
+	$(AS) $(ASOUT)$@ $< $(AFLAGS) -DCoCo=2 -DBIN=1 -b -DBECKER=1 -DBECKBASE=65388
 
 dw3dos_directmodem_pak.bin:	dw3dos.asm
 	$(AS) $(ASOUT)$@ $< $(AFLAGS) -DCoCo=2 -DBIN=1 -b -DSY6551N=1 -DSY6551B=65388
@@ -154,6 +165,9 @@ dw4doscc2.wav:	dw4doscc2.bin
 # DW3DOS Tracks
 dw3dosbck.trk:	dw3dos.asm
 	$(AS) $(ASOUT)$@ $< $(AFLAGS) -DCoCo=2 -DDOSTRACK -DBECKER=1
+
+dw3dos_bckwifi.trk:	dw3dos.asm
+	$(AS) $(ASOUT)$@ $< $(AFLAGS) -DCoCo=2 -DDOSTRACK -DBECKER=1 -DBECKBASE=65388
 
 dw3dos_directmodem_pak.trk:	dw3dos.asm
 	$(AS) $(ASOUT)$@ $< $(AFLAGS) -DCoCo=2 -DDOSTRACK -DSY6551N=1 -DSY6551B=65388
