--- a/cocoroms/Makefile
+++ b/cocoroms/Makefile
@@ -1,22 +1,22 @@
 all: bas13.rom extbas11.rom disk11.rom coco3.rom
 
 bas13.rom: equates.asm bas.asm
-	mamou -q -mr equates.asm bas.asm -o$@
+	lwasm equates.asm bas.asm -o$@ --raw
 
 cb_equates.asm: equates.asm bas.asm
-	$(shell mamou -q -mr equates.asm bas.asm -sa > cb_equates.asm)
+	$(shell lwasm equates.asm bas.asm --symbol-dump > cb_equates.asm)
 
 extbas11.rom: bas.asm cb_equates.asm extbas.asm equates.asm
-	mamou -q -mr cb_equates.asm extbas.asm -o$@
+	lwasm cb_equates.asm extbas.asm -o$@ --raw
 
 ecb_equates.asm: equates.asm bas.asm extbas.asm
-	$(shell mamou -q -mr equates.asm bas.asm extbas.asm -sa > ecb_equates.asm)
+	$(shell lwasm equates.asm bas.asm extbas.asm --symbol-dump > ecb_equates.asm)
    
 disk11.rom: ecb_equates.asm disk.asm
-	mamou -q -mr ecb_equates.asm disk.asm -o$@
+	lwasm ecb_equates.asm disk.asm -o$@ --raw
 
 coco3.rom: equates.asm coco3.asm
-	mamou -q -mr equates.asm coco3.asm -o$@
+	lwasm equates.asm coco3.asm -o$@ --raw
    
 clean:
 	-rm -f bas13.rom cb_equates.asm ecb_equates.asm extbas11.rom disk11.rom coco3.rom
