cocoroms: Tidy up Makefile
- Avoid spurious a.out in equates generation
- Remove misused shell substitution
- Remove redundant dependencies
- Use make special variables for consistency

--- a/cocoroms/Makefile
+++ b/cocoroms/Makefile
@@ -1,23 +1,22 @@
 all: bas13.rom extbas11.rom disk11.rom coco3.rom
 
 bas13.rom: equates.asm bas.asm
-	lwasm equates.asm bas.asm -o$@ --raw
+	lwasm --raw -o $@ $^
 
 cb_equates.asm: equates.asm bas.asm
-	$(shell lwasm equates.asm bas.asm --symbol-dump > cb_equates.asm)
+	lwasm --symbol-dump --no-output $^ > $@
 
-extbas11.rom: bas.asm cb_equates.asm extbas.asm equates.asm
-	lwasm cb_equates.asm extbas.asm -o$@ --raw
+extbas11.rom: cb_equates.asm extbas.asm
+	lwasm --raw -o $@ $^
 
 ecb_equates.asm: equates.asm bas.asm extbas.asm
-	$(shell lwasm equates.asm bas.asm extbas.asm --symbol-dump > ecb_equates.asm)
+	lwasm --symbol-dump --no-output $^ > $@
    
 disk11.rom: ecb_equates.asm disk.asm
-	lwasm ecb_equates.asm disk.asm -o$@ --raw
+	lwasm --raw -o $@ $^
 
 coco3.rom: equates.asm coco3.asm
-	lwasm equates.asm coco3.asm -o$@ --raw
+	lwasm --raw -o $@ $^
    
 clean:
 	-rm -f bas13.rom cb_equates.asm ecb_equates.asm extbas11.rom disk11.rom coco3.rom
-	
