cocoroms: Check built rom images against checksum file

--- a/cocoroms/Makefile
+++ b/cocoroms/Makefile
@@ -1,4 +1,4 @@
-all: bas13.rom extbas11.rom disk11.rom coco3.rom
+all: bas13.rom extbas11.rom disk11.rom coco3.rom checksum
 
 bas13.rom: equates.asm bas.asm
 	lwasm --raw -o $@ $^
@@ -11,12 +11,15 @@ extbas11.rom: cb_equates.asm extbas.asm
 
 ecb_equates.asm: equates.asm bas.asm extbas.asm
 	lwasm --symbol-dump --no-output $^ > $@
-   
+
 disk11.rom: ecb_equates.asm disk.asm
 	lwasm --raw -o $@ $^
 
 coco3.rom: equates.asm coco3.asm
 	lwasm --raw -o $@ $^
-   
+
+checksum:
+	md5sum -c --quiet --ignore-missing md5sums.txt
+
 clean:
 	-rm -f bas13.rom cb_equates.asm ecb_equates.asm extbas11.rom disk11.rom coco3.rom
