Standardize build system, reformat ASM files, and reorganize documentation
- Standardized Unix build system using rules.mak template
- Reformatted hdbdos.asm and superdos-e6-03.asm (16/24/40 alignment)
- Migrated documentation to doc/ directory and improved content
- Applied code quality fixes (malloc checks, safe string handling)
- Updated unittest suite for better coverage

--- a/dwdos/Makefile
+++ b/dwdos/Makefile
@@ -1,9 +1,10 @@
 
 DEPENDS		= ./Makefile
 
-#AS		= mamou -r -q
-AS		= lwasm -r --pragma=condundefzero
+AS		= lwasm
+AFLAGS		= -r --pragma=condundefzero
 ASOUT		= -o
+RM		= rm -f
 ECHO		= echo
 MAKEWAV		= makewav -r -c
 
@@ -217,7 +218,7 @@ dw4dos_cc3.trk:	dw3dos.asm
 	$(AS) $(ASOUT)$@ $< $(AFLAGS) -DCoCo=3 -DDOSTRACK -DDW4=1
 
 dw4dos_cc2.trk:	dw3dos.asm
-	$(AS) $(ASOUT)$@ $< $(AFLAGS) -DCoCo=2 -DDOSTRACK -DDW4=1
+	$(AS) $(AFLAGS) $(ASOUT)$@ $< $(AFLAGS) -DCoCo=2 -DDOSTRACK -DDW4=1
 
 drivewire.zip: $(ALLOBJS)
 	zip $@ $(ALLOBJS)
